<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">
    <include layout="@layout/log_view" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:elevation="3dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:paddingLeft="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_destination_label"
                    android:id="@+id/textView"
                    />

                <EditText
                    android:id="@+id/invoice_destination"
                    android:layout_width="0dp"
                    android:layout_weight=".75"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textColorHint="@color/black"
                    android:inputType="textMultiLine"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:weightSum="1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_type_label"
                    android:textStyle="bold"
                    android:id="@+id/textView2"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight=".75"
                    android:layout_height="match_parent"
                    android:id="@+id/invoice_type"
                    android:spinnerMode="dropdown"
                    android:entries="@array/invoice_type_list"
                    android:layout_marginRight="10dp"
                    android:prompt="@+id/invoice_type" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_duration_label"
                    android:id="@+id/textView3"/>

                <EditText
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textColorHint="@color/black"
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/invoice_duration" />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:paddingLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/invoice_gps"
                    android:layout_weight=".75"
                    android:inputType="textMultiLine"
                    android:clickable="false"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:focusable="false"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:elevation="3dp"
        app:cardCornerRadius="4dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/invoice_comments"
                android:hint="@string/invoice_comments_hint"
                android:textSize="14sp"
                android:singleLine="false" />

            <ViewStub
                android:id="@+id/layout_btn"
                android:inflatedId="@+id/invoice_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>